--- a/.github/workflows/build-openwrt-armvirt.yml
+++ b/.github/workflows/build-openwrt-armvirt.yml
@@ -15,8 +15,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  #schedule:
-    #- cron: '0 17 * * *'
+  schedule:
+     cron: '0 17 * * *'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -25,12 +25,12 @@ env:
   CONFIG_FILE: ARMv8/lede-gcc11.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_ARMVIRT: false
-  UPLOAD_FIRMWARE: false
+  UPLOAD_BIN_DIR: true
+  UPLOAD_ARMVIRT: true
+  UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   RECENT_LASTEST: 30
-  TZ: Asia/Shanghai
+  TZ: Asia/Jakarta
   FILE_NAME: openwrt_armvirt
   PRODUCT_NAME: openwrt_armvirt
 
