--- a/.github/workflows/build-openwrt-armvirt.yml
+++ b/.github/workflows/build-openwrt-armvirt.yml
@@ -15,8 +15,9 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+  on:
   schedule:
-     cron: '0 17 * * *'
+    - cron:  '0 17 * * *'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
