--- a/.github/workflows/ARMv8 OpenWrt  Lienol Docker.yml
+++ b/.github/workflows/ARMv8 OpenWrt  Lienol Docker.yml
@@ -18,7 +18,9 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-
+        schedule:
+           - cron: 0 8 * * *
+    
 env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: main
