--- a/.github/workflows/ARMv8 OpenWrt  Lienol.yml
+++ b/.github/workflows/ARMv8 OpenWrt  Lienol.yml
@@ -24,7 +24,7 @@ on:
 env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: main
-  FEEDS_CONF: lienol.feeds.conf.default
+  FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ARMv8/lienol.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: lienol-diy-part2.sh
